* class-PANAPIConnector - introduce hidden arguments: shadow-displaycurlrequest | shadow-hiddenapikey (new with PAN-OS 9.0 - send API key via Header)
* update predefined.xml to 8110-5233

utils:
address-edit: improvement for actions=decommisssion - extend interface (ethernet/vlan/loopback/tunnel) with add/removeIPv4address
address-edit: new filter '(value string.regex /[SEARCH-STRING]/)'
upload-config: extend in=api://[MGTM-IP]/panorama-pushed-config to download panorama pushed config
rule-edit: introduce hip-profile for actions=display
rule-edit: new actions=hip-set:[HIP-Profile]
rule-edit: new action "logsetting-set-FastAPI:[LOGFORWARD]"
address-merger: extend skipped object output with DG information
address-edit: new actions=value-host-object-add-netmask-m32
userid-mgr: fix help / missing variable set
register-ip-mgr: introduce new util
rule-merger: merge for all methods the available tags
rule-merger: merge for all methods the available description
pan-diff: introduce new util to easily compare two pan-os xml config file
panos-xml-issue-detector: introduce new util to fine e.g. duplicate member in address-/service-group
address-merger: extend location=any - especially for Panorama DG to merge all DG objects with one single script run - also possible with argument allowmergingwithupperlevel
register-ip-mgr | introduce new util to display and unregister-unused dynamic registered-ip addresses

utils(under development):
ike: new script to show all IKE/IPsec profile and config settings
interface: new script to show interface settings
routing: new script to show route settings
vsys: new script to show all vsys
vwire: new script to show vwire settings
zone: new script to show zone settings

bugfix:
- fix class-IpsecTunnel | related to proxy-id if <protocol> is not available
- fix class-EthernetInterfaceStore | xpath fix
- fix implementation of class-AggregateEthernetInterface